# analytics-tracker

./: .editorconfig  .env  .env.unified.example  .gitignore  ARCHITECTURE.md  Functions.md  INSTRUCTIONS.md  README.md  READMEdesign.md  READMEuser.md  api.yml  architecture-diagram.drawio  db.md  package-lock.json  package.json  pnpm-workspace.yaml  requirements.txt  todo.txt
app/: __init__.py  config.py  main.py
app/api/: __init__.py  client.py
app/models/: __init__.py  schemas.py
app/processing/: __init__.py  aggregator.py  analytics.py
app/utils/: __init__.py  logger.py  retry.py
apps/dashboard/: .env.example  .env.local.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  setup.js
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/components/: AuthGuard.tsx  BarChartComponent.tsx  ChartWrapper.tsx  DashboardFiltersPanel.tsx  DashboardNavbar.tsx  ExportButton.tsx  FilterBar.tsx  GeoMapComponent.tsx  LineChartComponent.tsx  MetricCard.tsx  (+5 more)
apps/sdk/: README.md  package.json  tsconfig.json
design/: metricflow-integration-spec.md
scripts/: build-sdk.mjs  dev-all.mjs  free-port.mjs  sync-env.mjs
services/analyzer/: .env.example  README.md  pyproject.toml
services/analyzer/src/metricflow_analyzer/: __init__.py  client.py  config.py  metrics.py  models.py  worker.py
services/analyzer/src/metricflow_analyzer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
services/analyzer/tests/: test_metrics.py
services/backend/: .env.example  README.md  package.json  pnpm-lock.yaml
(+51 files in other folders)
